# PRolice

./: .gitignore  .rustfmt.toml  AUTHORS  Cargo.toml  cargo-makefile.toml  readme.md
.github/workflows/: quickstart_ci.yaml
lib/: lib.rs
src/: error.rs  main.rs  metadata.rs
src/github/: mod.rs
src/github/client/: connector.rs  mod.rs  pool.rs
src/github/json/: commit.rs  commit_comment.rs  mod.rs  page.rs  review.rs
src/github/utils/: analyzer.rs  mod.rs  pull_request_data.rs  repository_data.rs
src/report/: mod.rs  template.rs
src/report/template/: report.hbs
src/scoring/: mod.rs  scorable.rs  score.rs
tests/: test.rs
